# signature

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  conan.llvm  conan.profile  conanfile.txt  license.txt  readme.md  test.cmd  test.sh
include/qis/: signature.hpp
res/: .gitignore  benchmark.cmd  benchmark.sh  check.sh  linux-avx2-equal-1.md  linux-default.md  linux-ranges-02.md  linux-ranges-04.md  linux-ranges-08.md  linux-ranges-1024.md  linux-ranges-12.md  linux-ranges-16.md  linux-ranges-24.md  linux-ranges-32.md  linux-ranges-48.md  linux-ranges-64-threshold-0.md  linux-ranges-64.md  linux.md  notes.md  windows-avx2-equal-1.md  windows-default.md  windows-ranges-02.md  windows-ranges-04.md  windows-ranges-08.md  windows-ranges-1024.md  windows-ranges-12.md  windows-ranges-16.md  windows-ranges-24.md  windows-ranges-32.md  windows-ranges-48.md  windows-ranges-64-threshold-0.md  windows-ranges-64.md  windows.md
src/: benchmarks.cpp  benchmarks.hpp  main.cpp  memory.cpp  memory.hpp  print.hpp  simulate.hpp  tests.cpp  tests.hpp
src/benchmarks/: avx.cpp  avx_par.cpp  avx_seq.cpp  avx_seq_noe.cpp  avx_tbb.cpp  avx_tbb_noe.cpp  std.cpp  std_par.cpp  std_seq.cpp  std_seq_noe.cpp  std_tbb.cpp  std_tbb_noe.cpp
src/tests/: avx.cpp  avx_par.cpp  avx_seq.cpp  avx_seq_noe.cpp  avx_tbb.cpp  avx_tbb_noe.cpp  std.cpp  std_par.cpp  std_seq.cpp  std_seq_noe.cpp  std_tbb.cpp  std_tbb_noe.cpp
